--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,153 @@
-django
-django-tailwind
-django_browser_reload
-scikit-learn
-seaborn
-pandas
-joblib
-matplotlib
-numpy
-imblearn
+affine==2.4.0
+aiofiles==23.2.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asgiref==3.8.1
+asttokens==2.4.1
+attrs==24.2.0
+blinker==1.8.2
+branca==0.8.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+chatterbot-corpus==1.2.0
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.9
+decorator==5.1.1
+Django==5.1.4
+django-browser-reload==1.17.0
+django-tailwind==3.8.0
+executing==2.1.0
+fastapi==0.115.4
+ffmpy==0.4.0
+filelock==3.16.1
+fiona==1.10.1
+Flask==3.0.3
+folium==0.19.2
+fonttools==4.54.1
+fsspec==2024.10.0
+geographiclib==2.0
+geopandas==0.14.4
+geopy==2.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+googlemaps==4.10.0
+gradio==5.4.0
+gradio_client==1.4.2
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.26.2
+idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
+importlib_metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.29.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+narwhals==1.12.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+orjson==3.10.10
+osmnx==1.9.4
+packaging==24.1
+pandas==2.2.3
+parso==0.8.4
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==5.24.1
+ply==3.11
+polyline==2.0.2
+prompt_toolkit==3.0.48
+protobuf==5.28.3
+psutil==6.1.0
+PuLP==2.9.0
+pure_eval==0.2.3
+pyarrow==18.0.0
+pyasn1==0.6.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+Pyomo==6.8.0
+pyparsing==3.1.4
+pyproj==3.7.0
+PySimpleGUI==5.0.7
+python-dateutil==2.9.0.post0
+python-multipart==0.0.12
+pytz==2024.2
+pywin32==308
+PyYAML==3.13
+pyzmq==26.2.0
+rasterio==1.4.3
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+retrying==1.3.4
+rich==13.9.3
+rpds-py==0.20.0
+rsa==4.9
+ruff==0.7.1
+safehttpx==0.1.1
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+semantic-version==2.10.0
+setuptools==75.3.0
+shapely==2.0.6
+shellingham==1.5.4
+six==1.16.0
+sklearn-compat==0.1.3
+smmap==5.0.1
+sniffio==1.3.1
+sqlparse==0.5.3
+stack-data==0.6.3
+starlette==0.41.2
+streamlit==1.41.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tomlkit==0.12.0
+tornado==6.4.1
+tqdm==4.66.6
+traitlets==5.14.3
+typer==0.12.5
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
+watchdog==5.0.3
+wcwidth==0.2.13
+websockets==12.0
+Werkzeug==3.0.6
+Wikipedia-API==0.7.1
+xyzservices==2024.9.0
+zipp==3.20.2
