--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ branca==0.8.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
-chatterbot-corpus==1.2.0
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
@@ -72,7 +71,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 narwhals==1.12.0
 nest-asyncio==1.6.0
-networkx==3.4.2
+networkx
 nltk==3.9.1
 numpy==1.26.4
 orjson==3.10.10
@@ -104,7 +103,7 @@ PySimpleGUI==5.0.7
 python-dateutil==2.9.0.post0
 python-multipart==0.0.12
 pytz==2024.2
-PyYAML==3.13
+PyYAML
 pyzmq==26.2.0
 rasterio==1.4.3
 referencing==0.35.1
